--- a/home.html
+++ b/home.html
@@ -1464,7 +1464,7 @@ ball mill</pre
           <div class="connect">
             <div class="closekey">
 
-              <img src=".../assets/close.png"  alt="">
+              <img src="./assets/close.png"  alt="clos">
             </div>
             <div class="objects">
               <h1 class="home-section1__hero-title31 layout">Hello</h1>
