--- a/synthano/Synthano.html
+++ b/synthano/Synthano.html
@@ -36,10 +36,10 @@
             <div class="synthano-section1__flex-item1">
               <div class="synthano-section1__block20 layout">
                 <div class="synthano-section1__block13 layout">
-                  <div class="synthano-section1__text-body3 layout"><a href="/Home.html">HOME </a></div>
+                  <div class="synthano-section1__text-body3 layout"><a href="../Home.html">HOME </a></div>
                 </div>
                 <div class="synthano-section1__block14 layout">
-                  <div class="synthano-section1__text-body3 layout1"><a href="/whoweare/Whoweare.html">WHO WE ARE</a></div>
+                  <div class="synthano-section1__text-body3 layout1"><a href="../whoweare/Whoweare.html">WHO WE ARE</a></div>
                 </div>
                 <div class="synthano-section1__block21 layout">
                   <div class="synthano-section1__block22 layout">
@@ -79,7 +79,7 @@
           </div>
         </div>
         <div class="synthano-section1__flex1 layout">
-          <a href="/Home.html" class="synthano-section1__text-body layout">Home</a>
+          <a href="../Home.html" class="synthano-section1__text-body layout">Home</a>
           <div class="synthano-section1__flex1-spacer"></div>
           <div class="synthano-section1__flex1-item">
             <div
@@ -88,7 +88,7 @@
             ></div>
           </div>
           <div class="synthano-section1__flex1-spacer1"></div>
-          <a href="/whatwedo/Whatwedo.html" class="synthano-section1__text-body layout">What we do</a>
+          <a href="../whatwedo/Whatwedo.html" class="synthano-section1__text-body layout">What we do</a>
           <div class="synthano-section1__flex1-spacer2"></div>
           <div class="synthano-section1__flex1-item">
             <div
@@ -661,21 +661,21 @@ as per your requirement !!</pre
           <div class="home-section1__paragraph-body3 layout">Overview</div>
           <div class="home-section1__block54-spacer"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout " id="products">
           <div class="home-section1__paragraph-body4 layout">Products</div>
           <div class="home-section1__block54-spacer1"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout1" id="services">
           <div class="home-section1__paragraph-body5 layout">Services</div>
           <div class="home-section1__block54-spacer2"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
       </div>
