--- a/whoweare/Whoweare.html
+++ b/whoweare/Whoweare.html
@@ -12,9 +12,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <link rel="stylesheet" type="text/css" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-    <link rel="stylesheet" type="text/css" href="css/Whoweare.css" />
+    <link rel="stylesheet" type="text/css" href="./css/common.css" />
+    <link rel="stylesheet" type="text/css" href="./css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="./css/Whoweare.css" />
 
     <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script type="text/javascript" src="https://unpkg.com/headroom.js@0.12.0/dist/headroom.min.js"></script>
@@ -26,7 +26,7 @@
       <section class="whoweare-section1__section1 layout">
         <div class="whoweare-section1__block30 layout">
           <div
-            style="--src:url(/whoweare/assets/e79ff49c60cbb87545854341b1c32f6b.png)"
+            style="--src:url(../assets/e79ff49c60cbb87545854341b1c32f6b.png)"
             class="whoweare-section1__cover-block layout"
           >
             
@@ -59,7 +59,7 @@ SCINOMAT is helping researchers, research institutions and industries harnessing
             <div class="whoweare-section1__block40 layout">
               <div class="whoweare-section1__block40-item">
                 <div
-                  style="--src:url(/whoweare/assets/5df022bcd35f39aaf80feba5ec123f87.png)"
+                  style="--src:url(../assets/5df022bcd35f39aaf80feba5ec123f87.png)"
                   class="whoweare-section1__image4 layout"
                 ></div>
               </div>
@@ -81,7 +81,7 @@ SCINOMAT is helping researchers, research institutions and industries harnessing
                         <div class="whoweare-section1__block45-item">
                           <div class="whoweare-section1__block46 layout">
                             <div
-                              style="--src:url(/whoweare/assets/cef66a67bb77c9be722ffee3bcebe70e.png)"
+                              style="--src:url(../assets/cef66a67bb77c9be722ffee3bcebe70e.png)"
                               class="whoweare-section1__image5 layout"
                             ></div>
                             <div class="whoweare-section1__box layout"></div>
@@ -147,13 +147,13 @@ SCINOMAT is helping researchers, research institutions and industries harnessing
           <div class="whoweare-section2__block2 layout">
             <div class="whoweare-section2__block2-item">
               <div
-                style="--src:url(/whoweare/assets/26b9a0f261338cadde72ce25745ff712.png)"
+                style="--src:url(../assets/26b9a0f261338cadde72ce25745ff712.png)"
                 class="whoweare-section2__icon layout"
               ></div>
             </div>
             <div class="whoweare-section2__block2-item1">
               <div
-                style="--src:url(/whoweare/assets/4c07e7e9ab8340f1ed2472c116061aa9.png)"
+                style="--src:url(../assets/4c07e7e9ab8340f1ed2472c116061aa9.png)"
                 class="whoweare-section2__icon1 layout"
               ></div>
             </div>
@@ -172,12 +172,12 @@ SCINOMAT is helping researchers, research institutions and industries harnessing
             <div class="whoweare-section3__flex1 layout">
               <div class="whoweare-section3__block29 layout">
                 <div
-                  style="--src:url(/whoweare/assets/999c9c182e05ed4e31748f3a937aed0b.png)"
+                  style="--src:url(../assets/999c9c182e05ed4e31748f3a937aed0b.png)"
                   class="whoweare-section3__image3 layout"
                 ></div>
               </div>
               <div
-                style="--src:url(/whoweare/assets/999c9c182e05ed4e31748f3a937aed0b.png)"
+                style="--src:url(../assets/999c9c182e05ed4e31748f3a937aed0b.png)"
                 class="whoweare-section3__image3 layout1"
               ></div>
             </div>
@@ -224,7 +224,7 @@ Board</pre
             <div class="whoweare-section4__flex4-item1">
               <div class="whoweare-section4__block3 layout">
                 <div
-                  style="--src:url(/whoweare/assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
+                  style="--src:url(../assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -239,7 +239,7 @@ Board</pre
             <div class="whoweare-section4__flex4-item2">
               <div class="whoweare-section4__block3 layout">
                 <div
-                  style="--src:url(/whoweare/assets/261de4db83da6c116ad4c7675bb5771b.png)"
+                  style="--src:url(../assets/261de4db83da6c116ad4c7675bb5771b.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -254,7 +254,7 @@ Board</pre
             <div class="whoweare-section4__flex4-item3">
               <div class="whoweare-section4__block3 layout">
                 <div
-                  style="--src:url(/whoweare/assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
+                  style="--src:url(../assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -270,7 +270,7 @@ Board</pre
             <div class="whoweare-section4__flex8-item">
               <div class="whoweare-section4__block3 layout1">
                 <div
-                  style="--src:url(/whoweare/assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
+                  style="--src:url(../assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -285,7 +285,7 @@ Board</pre
             <div class="whoweare-section4__flex8-item">
               <div class="whoweare-section4__block3 layout2">
                 <div
-                  style="--src:url(/whoweare/assets/261de4db83da6c116ad4c7675bb5771b.png)"
+                  style="--src:url(../assets/261de4db83da6c116ad4c7675bb5771b.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -300,7 +300,7 @@ Board</pre
             <div class="whoweare-section4__flex8-item">
               <div class="whoweare-section4__block3 layout3">
                 <div
-                  style="--src:url(/whoweare/assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
+                  style="--src:url(../assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -316,7 +316,7 @@ Board</pre
             <div class="whoweare-section4__flex12-item">
               <div class="whoweare-section4__block3 layout4">
                 <div
-                  style="--src:url(/whoweare/assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
+                  style="--src:url(../assets/8ec7bdeccf10ff69de6ec6f212e061ec.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -331,7 +331,7 @@ Board</pre
             <div class="whoweare-section4__flex12-item">
               <div class="whoweare-section4__block3 layout5">
                 <div
-                  style="--src:url(/whoweare/assets/261de4db83da6c116ad4c7675bb5771b.png)"
+                  style="--src:url(../assets/261de4db83da6c116ad4c7675bb5771b.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -346,7 +346,7 @@ Board</pre
             <div class="whoweare-section4__flex12-item">
               <div class="whoweare-section4__block3 layout6">
                 <div
-                  style="--src:url(/whoweare/assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
+                  style="--src:url(../assets/b476af1bb8bd6136ed60d33abdbee0a9.png)"
                   class="whoweare-section4__block4 layout"
                 ></div>
                 <div class="whoweare-section4__block5 layout">
@@ -405,12 +405,12 @@ Board</pre
                 <div class="whoweare-section5__block18-item">
                   <div class="whoweare-section5__block19 layout">
                     <div
-                      style="--src:url(/whoweare/assets/2444055d2d6ca2940c5a407f90426fb6.png)"
+                      style="--src:url(../assets/2444055d2d6ca2940c5a407f90426fb6.png)"
                       class="whoweare-section5__image1 layout"
                     ></div>
                     <a
                       href="https://facebook.com"
-                      style="--src:url(/whoweare/assets/1d78f9e6d5632068667323c85aea172c.png)"
+                      style="--src:url(../assets/1d78f9e6d5632068667323c85aea172c.png)"
                       class="whoweare-section5__icon2 layout"
                     ></a>
                   </div>
@@ -419,12 +419,12 @@ Board</pre
                 <div class="whoweare-section5__block18-item">
                   <div class="whoweare-section5__block20 layout">
                     <div
-                      style="--src:url(/whoweare/assets/87af3b6b1e21d47db4afe37d8202c348.png)"
+                      style="--src:url(../assets/87af3b6b1e21d47db4afe37d8202c348.png)"
                       class="whoweare-section5__image2 layout"
                     ></div>
                     <a
                       href="https://twitter.com"
-                      style="--src:url(/whoweare/assets/3f444ee41d8368af7c707e0971634ace.png)"
+                      style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                       class="whoweare-section5__icon3 layout"
                     ></a>
                   </div>
@@ -433,12 +433,12 @@ Board</pre
                 <div class="whoweare-section5__block18-item">
                   <div class="whoweare-section5__block21 layout">
                     <div
-                      style="--src:url(/whoweare/assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
+                      style="--src:url(../assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
                       class="whoweare-section5__icon4 layout"
                     ></div>
                     <a
                       href="https://linkedin.com"
-                      style="--src:url(/whoweare/assets/3f444ee41d8368af7c707e0971634ace.png)"
+                      style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                       class="whoweare-section5__icon3 layout"
                     ></a>
                   </div>
@@ -494,12 +494,12 @@ Board</pre
             <div class="whoweare-section5__block18-item">
               <div class="whoweare-section5__block19 layout">
                 <div
-                  style="--src:url(/whoweare/assets/2444055d2d6ca2940c5a407f90426fb6.png)"
+                  style="--src:url(../assets/2444055d2d6ca2940c5a407f90426fb6.png)"
                   class="whoweare-section5__image1 layout"
                 ></div>
                 <a
                   href="https://facebook.com"
-                  style="--src:url(/whoweare/assets/1d78f9e6d5632068667323c85aea172c.png)"
+                  style="--src:url(../assets/1d78f9e6d5632068667323c85aea172c.png)"
                   class="whoweare-section5__icon2 layout"
                 ></a>
               </div>
@@ -508,12 +508,12 @@ Board</pre
             <div class="whoweare-section5__block18-item">
               <div class="whoweare-section5__block20 layout">
                 <div
-                  style="--src:url(/whoweare/assets/87af3b6b1e21d47db4afe37d8202c348.png)"
+                  style="--src:url(../assets/87af3b6b1e21d47db4afe37d8202c348.png)"
                   class="whoweare-section5__image2 layout"
                 ></div>
                 <a
                   href="https://twitter.com"
-                  style="--src:url(/whoweare/assets/3f444ee41d8368af7c707e0971634ace.png)"
+                  style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                   class="whoweare-section5__icon3 layout"
                 ></a>
               </div>
@@ -522,12 +522,12 @@ Board</pre
             <div class="whoweare-section5__block18-item">
               <div class="whoweare-section5__block21 layout">
                 <div
-                  style="--src:url(/whoweare/assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
+                  style="--src:url(../assets/7f830499cc90acd6e3166e3eb2d83e5c.png)"
                   class="whoweare-section5__icon4 layout"
                 ></div>
                 <a
                   href="https://linkedin.com"
-                  style="--src:url(/whoweare/assets/3f444ee41d8368af7c707e0971634ace.png)"
+                  style="--src:url(../assets/3f444ee41d8368af7c707e0971634ace.png)"
                   class="whoweare-section5__icon3 layout"
                 ></a>
               </div>
@@ -548,21 +548,21 @@ Board</pre
           <div class="home-section1__paragraph-body3 layout">Overview</div>
           <div class="home-section1__block54-spacer"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout " id="products">
           <div class="home-section1__paragraph-body4 layout">Products</div>
           <div class="home-section1__block54-spacer1"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout1" id="services">
           <div class="home-section1__paragraph-body5 layout">Services</div>
           <div class="home-section1__block54-spacer2"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
       </div>
