--- a/whatwedo/Whatwedo.html
+++ b/whatwedo/Whatwedo.html
@@ -397,21 +397,21 @@ Suspensions/mixtures of desired compositions</pre
           <div class="home-section1__paragraph-body3 layout">Overview</div>
           <div class="home-section1__block54-spacer"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout " id="products">
           <div class="home-section1__paragraph-body4 layout">Products</div>
           <div class="home-section1__block54-spacer1"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
         <div class="home-section1__block54 layout1" id="services">
           <div class="home-section1__paragraph-body5 layout">Services</div>
           <div class="home-section1__block54-spacer2"></div>
           <div class="home-section1__block54-item">
-            <div style="--src:url(/assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
+            <div style="--src:url(../assets/67fdf6c43cdee78ed291952c4e5f5e6a.png)" class="home-section1__image42 layout"></div>
           </div>
         </div>
       </div>
