compete for github

--- a/matsc/Matsc.html
+++ b/matsc/Matsc.html
@@ -68,10 +68,10 @@
             <div class="matsc-section1__flex-item1">
               <div class="matsc-section1__block20 layout">
                 <div class="matsc-section1__block13 layout">
-                  <div class="matsc-section1__text-body3 layout"><a href="/home.html">HOME</a></div>
+                  <div class="matsc-section1__text-body3 layout"><a href="../home.html">HOME</a></div>
                 </div>
                 <div class="matsc-section1__block14 layout">
-                  <div class="matsc-section1__text-body3 layout1"><a href="/whoweare/Whoweare.html">WHO WE ARE</a></div>
+                  <div class="matsc-section1__text-body3 layout1"><a href="../whoweare/Whoweare.html">WHO WE ARE</a></div>
                 </div>
                 <div class="matsc-section1__block21 layout">
                   <div class="matsc-section1__block22 layout">
@@ -90,13 +90,13 @@
                   <hr class="matsc-section1__line1 layout" />
                 </div>
                 <div class="matsc-section1__block24 layout">
-                  <div class="matsc-section1__text-body3 layout2"><a href="/upcoming/Upcoming.html ">UPCOMING</a></div>
+                  <div class="matsc-section1__text-body3 layout2"><a href="../upcoming/Upcoming.html ">UPCOMING</a></div>
                 </div>
                 <div class="matsc-section1__block16 layout">
-                  <div class="matsc-section1__text-body3 layout3"><a href="/engage/EngageWithus.html">ENGAGE WITH US</a></div>
+                  <div class="matsc-section1__text-body3 layout3"><a href="../engage/EngageWithus.html">ENGAGE WITH US</a></div>
                 </div>
                 <div class="matsc-section1__block17 layout">
-                  <div class="matsc-section1__text-body3 layout4"><a href="/contact/contact.html">CONTACT</a></div>
+                  <div class="matsc-section1__text-body3 layout4"><a href="../contact/contact.html">CONTACT</a></div>
                 </div>
               </div>
             </div>
@@ -543,27 +543,27 @@ as per your requirement !!</pre
                 <div class="matsc-section7__block12 layout">
                   <div class="matsc-section7__block12-item">
                     <div class="matsc-section7__block13 layout">
-                      <div class="matsc-section7__text-body3 layout"><a href="/home.html">HOME</a></div>
+                      <div class="matsc-section7__text-body3 layout"><a href="../home.html">HOME</a></div>
                     </div>
                   </div>
                   <div class="matsc-section7__block12-item1">
                     <div class="matsc-section7__block14 layout">
-                      <div class="matsc-section7__text-body3 layout1"><a href="/whoweare/Whoweare.html">WHO WE ARE</a></div>
+                      <div class="matsc-section7__text-body3 layout1"><a href="../whoweare/Whoweare.html">WHO WE ARE</a></div>
                     </div>
                   </div>
                   <div class="matsc-section7__block12-item2">
                     <div class="matsc-section7__block15 layout">
-                      <div class="matsc-section7__text-body3 layout2"><a href="/whatwedo/Whatwedo.html ">WHAT WE DO</a></div>
+                      <div class="matsc-section7__text-body3 layout2"><a href="../whatwedo/Whatwedo.html ">WHAT WE DO</a></div>
                     </div>
                   </div>
                   <div class="matsc-section7__block12-item3">
                     <div class="matsc-section7__block16 layout">
-                      <div class="matsc-section7__text-body3 layout3"><a href="/engage/EngageWithus.html">ENGAGE WITH US</a></div>
+                      <div class="matsc-section7__text-body3 layout3"><a href="../engage/EngageWithus.html">ENGAGE WITH US</a></div>
                     </div>
                   </div>
                   <div class="matsc-section7__block12-item4">
                     <div class="matsc-section7__block17 layout">
-                      <div class="matsc-section7__text-body3 layout4"><a href="/contact/contact.html">CONTACT</a></div>
+                      <div class="matsc-section7__text-body3 layout4"><a href="../contact/contact.html">CONTACT</a></div>
                     </div>
                   </div>
                 </div>
@@ -590,7 +590,7 @@ as per your requirement !!</pre
                   </div>
                   <div class="matsc-section7__block2-item2">
                     <div class="matsc-section7__block5 layout">
-                      <div class="matsc-section7__text-body1 layout"><a href="/contact/contact.html">Contact</a></div>
+                      <div class="matsc-section7__text-body1 layout"><a href="../contact/contact.html">Contact</a></div>
                     </div>
                   </div>
                   <div class="matsc-section7__block2-item3">
