project air link fixed

--- a/projectair/ProjectAir.html
+++ b/projectair/ProjectAir.html
@@ -37,14 +37,14 @@
             <div class="project-air-section1__flex-item1">
               <div class="project-air-section1__block20 layout">
                 <div class="project-air-section1__block13 layout">
-                  <a href="/Home.html" class="project-air-section1__text-body2 layout">HOME</a>
+                  <a href="../Home.html" class="project-air-section1__text-body2 layout">HOME</a>
                 </div>
                 <div class="project-air-section1__block14 layout">
-                  <a href="/whoweare/Whoweare.html" class="project-air-section1__text-body2 layout1">WHO WE ARE</a>
+                  <a href="../whoweare/Whoweare.html" class="project-air-section1__text-body2 layout1">WHO WE ARE</a>
                 </div>
                 <div class="project-air-section1__block21 layout">
                   <div class="project-air-section1__block22 layout">
-                    <a href="/whatwedo/Whatwedo.html" class="project-air-section1__text-body2 layout2">WHAT WE DO</a>
+                    <a href="../whatwedo/Whatwedo.html" class="project-air-section1__text-body2 layout2">WHAT WE DO</a>
                     <div class="project-air-section1__block22-spacer"></div>
                     <div class="project-air-section1__block22-item">
                       <div class="project-air-section1__block23 layout">
@@ -58,14 +58,14 @@
                   </div>
                 </div>
                 <div class="project-air-section1__block24 layout">
-                  <a href="/upcoming/Upcoming.html" class="project-air-section1__text-body3 layout">UPCOMING</a>
+                  <a href="../upcoming/Upcoming.html" class="project-air-section1__text-body3 layout">UPCOMING</a>
                   <hr class="project-air-section1__line1 layout" />
                 </div>
                 <div class="project-air-section1__block16 layout">
-                  <a href="/engage/EngageWithus.html" class="project-air-section1__text-body2 layout3">ENGAGE WITH US</a>
+                  <a href="../engage/EngageWithus.html" class="project-air-section1__text-body2 layout3">ENGAGE WITH US</a>
                 </div>
                 <div class="project-air-section1__block17 layout">
-                  <a href="/contact/contact.html" class="project-air-section1__text-body2 layout4">CONTACT</a>
+                  <a href="../contact/contact.html" class="project-air-section1__text-body2 layout4">CONTACT</a>
                 </div>
               </div>
             </div>
@@ -88,7 +88,7 @@
                     style="--src:url(../assets/e3ad8abebce8a6694ac3b3aa4bb93af6.png)"
                     class="project-air-section1__cover-block layout"
                   >
-                    <a href="/Home.html" class="project-air-section1__text-body layout">Home</a>
+                    <a href="../Home.html" class="project-air-section1__text-body layout">Home</a>
                     <div class="project-air-section1__cover-block-spacer"></div>
                     <div class="project-air-section1__cover-block-item">
                       <div
@@ -97,7 +97,7 @@
                       ></div>
                     </div>
                     <div class="project-air-section1__cover-block-spacer1"></div>
-                    <a href="/upcoming/Upcoming.html" class="project-air-section1__text-body layout1">Upcoming</a>
+                    <a href="../upcoming/Upcoming.html" class="project-air-section1__text-body layout1">Upcoming</a>
                     <div class="project-air-section1__cover-block-spacer2"></div>
                     <div class="project-air-section1__cover-block-item">
                       <div
@@ -106,7 +106,7 @@
                       ></div>
                     </div>
                     <div class="project-air-section1__cover-block-spacer3"></div>
-                    <a href="/projectair/ProjectAir.html" class="project-air-section1__text-body layout2">Projectair</a>
+                    <a href="../projectair/ProjectAir.html" class="project-air-section1__text-body layout2">Projectair</a>
                   </div>
                 </div>
                 <div class="project-air-section1__flex3-item1">
@@ -540,27 +540,27 @@ Average Level of particulate matter
                 <div class="project-air-section6__block12 layout">
                   <div class="project-air-section6__block12-item">
                     <div class="project-air-section6__block13 layout">
-                      <a href="/Home.html" class="project-air-section6__text-body2 layout">HOME</a>
+                      <a href="../Home.html" class="project-air-section6__text-body2 layout">HOME</a>
                     </div>
                   </div>
                   <div class="project-air-section6__block12-item1">
                     <div class="project-air-section6__block14 layout">
-                      <a href="/whoweare/Whoweare.html" class="project-air-section6__text-body2 layout1">WHO WE ARE</a>
+                      <a href="../whoweare/Whoweare.html" class="project-air-section6__text-body2 layout1">WHO WE ARE</a>
                     </div>
                   </div>
                   <div class="project-air-section6__block12-item2">
                     <div class="project-air-section6__block15 layout">
-                      <a href="/whatwedo/Whatwedo.html" class="project-air-section6__text-body2 layout2">WHAT WE DO</a>
+                      <a href="../whatwedo/Whatwedo.html" class="project-air-section6__text-body2 layout2">WHAT WE DO</a>
                     </div>
                   </div>
                   <div class="project-air-section6__block12-item3">
                     <div class="project-air-section6__block16 layout">
-                      <a href="/engage/EngageWithus.html" class="project-air-section6__text-body2 layout3">ENGAGE WITH US</a>
+                      <a href="../engage/EngageWithus.html" class="project-air-section6__text-body2 layout3">ENGAGE WITH US</a>
                     </div>
                   </div>
                   <div class="project-air-section6__block12-item4">
                     <div class="project-air-section6__block17 layout">
-                      <a href="/contact/contact.html" class="project-air-section6__text-body2 layout4">CONTACT</a>
+                      <a href="../contact/contact.html" class="project-air-section6__text-body2 layout4">CONTACT</a>
                     </div>
                   </div>
                 </div>
@@ -587,7 +587,7 @@ Average Level of particulate matter
                   </div>
                   <div class="project-air-section6__block2-item2">
                     <div class="project-air-section6__block5 layout">
-                      <a href="/contact/contact.html" class="project-air-section6__text-body layout">Contact</a>
+                      <a href="../contact/contact.html" class="project-air-section6__text-body layout">Contact</a>
                     </div>
                   </div>
                   <div class="project-air-section6__block2-item3">
