js directory fixed

--- a/home.html
+++ b/home.html
@@ -1721,5 +1721,5 @@ best</pre>
       AOS.init();
     </script>
   </body>
-  <script src="js/script.js"></script>
+  <script src="./JS/script.js"></script>
 </html>
