--- a/engage/EngageWithus.html
+++ b/engage/EngageWithus.html
@@ -564,5 +564,5 @@ ball mill</pre>
       AOS.init();
     </script>
   </body>
-  <script src="./js/script.js"></script>
+  <script src="./JS/script.js"></script>
 </html>
